fix layout when one word is too long

--- a/client/src/components/chatListItem/ChatListItem.module.css
+++ b/client/src/components/chatListItem/ChatListItem.module.css
@@ -2,15 +2,18 @@
   display: flex;
   margin-bottom: 0.5rem;
   cursor: pointer;
+  justify-content: space-around;
 }
 
 .image-wrapper {
+  min-width: 3rem;
   max-width: 3rem;
 }
 
 .chatListItem__details {
   margin: 0 0.5rem;
   flex-grow: 1;
+  max-width: 70%;
 }
 
 .chatListItem__name {
@@ -21,6 +24,8 @@
 
 .chatListItem__text {
   margin-top: 0;
+  overflow-wrap: break-word;
+  max-width: 100%;
 }
 
 .chatListItem__time {
